--- a/contacto.html
+++ b/contacto.html
@@ -67,12 +67,15 @@
 	</section>
 
 	</main>
-	<footer class="pie">
-        <h3>Nuestras redes</h3>
-        <a href="https:/instagram.com/terra.more">
-            <img src="img/insta.png" alt="Instagram" width ="150" length="350">
-        </a>
-    </footer>
+	<footer id="piepag" class="footer">
+            <h2>Siguenos en nuestras redes</h2>
+            <a href="https://www.facebook.com/" target="_blank">
+                <img src="img/facebook.jpeg" alt="Siguenos en Facebook" width="50" height="30">
+            </a>
+            <a href="https://instagram.com/terra.more" target="_blank">
+                <img src="img/insta.png" alt="Siguenos en Instagram" width="50" height="27">
+            </a>
+	</footer>
 	
 </body>
 </html>
