--- a/nosotros.html
+++ b/nosotros.html
@@ -7,8 +7,8 @@
 	<link rel="stylesheet" href="css/style.css">
 </head>
 <body class="fondo">
-	<div class="gridt fade">
-		<header id="navt" class="navegacion">
+	<div class="fade">
+		<header  class="navegacion">
 			<nav>
 				<a href="index.html">
 					<img src="img/logo.png" alt="Logo del negocio"
@@ -33,7 +33,7 @@
 
 		</header>
 		<main>
-			<div id="inicio">
+			<div >
 				<h1>
 					Terramore
 				</h1>
@@ -45,7 +45,7 @@
 					</article>
 				</section>
 			</div>	
-			<div id="acerca">
+			<div >
 				<h2> Acerca de la creadora</h2>
 				<section class="seccion">
 					<article>
@@ -55,17 +55,19 @@
 				</section>
 			</div>
 			
-			<p id="creadora" class="art">
+			<p class="art">
 				<img class="mover" src="img/ange.png" alt="Foto de la creadora" width ="400" length="600">
 			</p>
 		</main>
-		<footer id="foot" class="pie">
-			<h3>Nuestras redes</h3>
-			<a href="https:/instagram.com/terra.more">
-				<img src="img/insta.png" alt="Instagram" width ="150" length="350">
-			</a>
-			
-		</footer>
+<footer  class="footer">
+            <h2>Siguenos en nuestras redes</h2>
+            <a href="https://www.facebook.com/" target="_blank">
+                <img src="img/facebook.jpeg" alt="Siguenos en Facebook" width="50" height="30">
+            </a>
+            <a href="https://instagram.com/terra.more" target="_blank">
+                <img src="img/insta.png" alt="Siguenos en Instagram" width="50" height="27">
+            </a>
+</footer>
 	</div>
 </body>
 </html>
